# fall-2021-cs-class

./: .breakpoints  .replit  README.md  pyproject.toml
.ipynb_checkpoints/: Class 21-checkpoint.ipynb
class1/: main.py
class10/: answer.py  main.py
class11/: answer.py  main.py
class12/: answer.py  main.py
class13/: answer.py  main.py
class14/: answer.py  main.py
class15/: answer.py  main.py
class16/: answer.py
class17/: main.py
class18/: answer.py  main.py
class19/: answer.py
class2/: answer.py  main.py
class20/: answer.py  main.py
class21/: answer.py  main.py
class22/: answer.py  main.py
class3/: answer.py  main.py
class4/: answer.py  main.py
class5/: main.py
class6/: example.py  main.py
class7/: main.py
class8/: answer.py  helper.py  main.py
class9/: answer.py  main.py
