[tool.poetry]
name = "repl_python3_tzu-chi-cs-class-fall-1"
version = "0.1.0"
description = ""
authors = ["DavidTsui1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
